[tool.poetry]
name = "reinforcement-learning-tp2"
version = "0.1.0"
description = ""
authors = ["Pierre-Louis Guhur <pierre-louis.guhur@laposte.net>"]
readme = "README.md"
packages = [{include = "reinforcement_learning_tp2"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
